[package]
name = "straight2prod"
version = "0.1.0"
authors = ["glowatsk <glowatsk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
reqwest = "0.11.12"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "straight2prod"

[dev-dependencies]
reqwest = "0.11"
