[package]
name = "straight2prod"
version = "0.1.0"
authors = ["glowatsk <glowatsk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
reqwest = "0.11.12"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"]}
config = "0.13"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
    ]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "straight2prod"

[dev-dependencies]
reqwest = "0.11"
