[package]
name = "straight2prod"
version = "0.1.0"
authors = ["glowatsk <glowatsk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
reqwest = "0.11.12"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"]}
config = "0.13"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
tracing = "0.1.37"
tracing-bunyan-formatter = "0.3.4"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
once_cell = "1.16.0"
secrecy = { version = "0.8", features = ["serde"] }
tracing-actix-web = "0.6"

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
    ]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "straight2prod"

[dev-dependencies]
reqwest = "0.11"
